--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,10 +8,8 @@
     <title>client</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="./index.js"></script>
   </body>
 </html>
