--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Anton|Cabin&display=swap" rel="stylesheet">
-    <title>client</title>
+    <title>Multiverse - Action Figures of Heroes</title>
   </head>
   <body>
     <noscript>
