--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ShonenPlays</title>
+    <script src="https://kit.fontawesome.com/6c4d1410c0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
